--- a/esp-idf/pyproject.toml
+++ b/esp-idf/pyproject.toml
@@ -1,9 +1,16 @@
 [project]
-name = "esp-idf"
+name = "main"
 version = "0.0.1"
 dependencies = []
+
+[tool.hatch.envs.dev]
+dependencies = [
+  "dagger-io @ {root:uri}/sdk",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
